[gd_scene load_steps=3 format=2]

[ext_resource path="res://sub_point.png" type="Texture" id=1]
[ext_resource path="res://point.gd" type="Script" id=2]

[node name="point" type="TextureButton"]
margin_left = 52.0829
margin_top = 34.6848
margin_right = 61.0829
margin_bottom = 43.6848
texture_normal = ExtResource( 1 )
script = ExtResource( 2 )
nama = "point1"

[node name="pos" type="Label" parent="."]
visible = false
margin_left = 16.0
margin_top = 8.0
margin_right = 122.0
margin_bottom = 22.0
text = "(0,0)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name" type="Label" parent="."]
margin_left = 16.5
margin_top = -8.0
margin_right = 122.5
margin_bottom = 6.0
text = "point"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
visible = false
margin_left = 17.0
margin_top = 16.0
margin_right = 237.0
margin_bottom = 137.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel"]
margin_left = 10.0
margin_top = 12.0
margin_right = 58.0
margin_bottom = 26.0
text = "Name"

[node name="Label2" type="Label" parent="Panel"]
margin_left = 8.5
margin_top = 52.0
margin_right = 68.5
margin_bottom = 66.0
text = "Show pos"

[node name="LineEdit" type="LineEdit" parent="Panel"]
margin_left = 142.0
margin_top = 9.0
margin_right = 212.0
margin_bottom = 33.0
text = "point"

[node name="CheckBox" type="CheckBox" parent="Panel"]
margin_left = 94.0
margin_top = 9.5
margin_right = 118.0
margin_bottom = 33.5

[node name="CheckBox2" type="CheckBox" parent="Panel"]
margin_left = 92.5
margin_top = 46.5
margin_right = 116.5
margin_bottom = 70.5
pressed = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Panel"]
margin_left = 143.784
margin_top = 90.0
margin_right = 207.784
margin_bottom = 110.0
text = "OK"

[connection signal="button_down" from="." to="." method="_on_point_button_down"]
[connection signal="button_up" from="." to="." method="_on_point_button_up"]
[connection signal="gui_input" from="." to="." method="_on_point_gui_input"]
[connection signal="text_changed" from="Panel/LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="toggled" from="Panel/CheckBox" to="." method="_on_CheckBox_toggled"]
[connection signal="toggled" from="Panel/CheckBox2" to="." method="_on_CheckBox2_toggled"]
[connection signal="pressed" from="Panel/Button" to="." method="_on_Button_pressed"]
